--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
+# Python Project
+*.txt
+*.pdf
+
 # General
 .DS_Store
 .AppleDouble
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
